# server

./: CMakeLists.txt  LICENSE  README.md  dataminingfactory.cpp  dataminingfactory.h  iDataMining.h  iStrategy.h  main.cpp  mining.cpp  mining.h  requestmapper.cpp  server.h  server.pro
API/: dataminingfactory.cpp  dataminingfactory.h
API/DebianMining/: debianmemorymining.cpp  debianmemorymining.h  debianosmining.cpp  debianosmining.h  debianprocessormining.h  debianstoragemining.cpp  debianstoragemining.h
API/Windows10Mining/: windows10memorymining.cpp  windows10memorymining.h  windows10osmining.h  windows10processormining.h  windows10storagemining.cpp  windows10storagemining.h
API/Windows7Mining/: windows7memorymining.h  windows7osmining.cpp  windows7osmining.h  windows7processormining.cpp  windows7processormining.h  windows7storagemining.h
DebianMining/: debianmemorymining.cpp  debianmemorymining.h  debianosmining.cpp  debianosmining.h  debianprocessormining.cpp  debianprocessormining.h  debianstoragemining.cpp  debianstoragemining.h
Lib/QtWebApp/doc/: releasenotes.txt
Lib/QtWebApp/httpserver/: CMakeLists.txt
Lib/QtWebApp/logging/: logmessage.cpp
Test/: unitTestAPI.cpp  unitTestAPI.h
Windows10Mining/: windows10memorymining.cpp  windows10osmining.cpp  windows10processormining.cpp  windows10processormining.h  windows10storagemining.cpp  windows10storagemining.h
Windows7Mining/: windows7memorymining.cpp  windows7osmining.cpp  windows7osmining.h  windows7processormining.cpp  windows7storagemining.cpp  windows7storagemining.h
controller/: jsoncontroller.cpp  jsoncontroller.h  maincontroller.cpp  maincontroller.h  notfoundcontroller.cpp  notfoundcontroller.h  oscontroller.cpp  oscontroller.h
